--- a/App/Admin/View/Public/default.html
+++ b/App/Admin/View/Public/default.html
@@ -59,6 +59,20 @@
                     <li><a href="{:U('User/addUser')}">用户添加</a></li>
                 </ul>
             </li>
+            <li class="submenu">
+                <a href="#"><i class="icon icon-th-list"></i> <span>文章类别</span> <span class="label">2</span></a>
+                <ul>
+                    <li><a href="{:U('Category/index')}">文章类别列表</a></li>
+                    <li><a href="{:U('Category/addCategory')}">文章类别添加</a></li>
+                </ul>
+            </li>
+            <li class="submenu">
+                <a href="#"><i class="icon icon-th-list"></i> <span>文章</span> <span class="label">2</span></a>
+                <ul>
+                    <li><a href="{:U('Content/index')}">文章列表</a></li>
+                    <li><a href="{:U('Content/addContent')}">文章添加</a></li>
+                </ul>
+            </li>
         </ul>
 
     </div>
