--- a/App/Admin/View/Category/addCategory.html
+++ b/App/Admin/View/Category/addCategory.html
@@ -1,34 +1,33 @@
-<html>
-<head>
-    <title>alter sports type</title>
-</head>
-<body>
-    <div class="altCategory pop-container">
-        <h2>add类型</h2>
-        <form>
-            <div class="opt-nav">
-                <label>父类型</label>
-                <select name="pCategory" class="opt-input">
-                    <if condition="pid eq 0">
-                        <option value="0" selected="selected">大类</option>
-                        <else/>
-                        <option value="0">大类</option>
-                    </if>
-                    <volist name="list" id="vo">
-                        <if condition="$vo['id'] eq $pid">
-                            <option value="{$vo.id}" selected="selected">{$vo.name}</option>
+<extend name="Public:default" />
+<block name="container">
+    <div class="container-fluid">
+        <div class="altCategory pop-container">
+            <h2>add类型</h2>
+            <form>
+                <div class="opt-nav">
+                    <label>父类型</label>
+                    <select name="pCategory" class="opt-input">
+                        <if condition="pid eq 0">
+                            <option value="0" selected="selected">大类</option>
                             <else/>
-                            <option value="{$vo.id}">{$vo.name}</option>
+                            <option value="0">大类</option>
                         </if>
-                    </volist>
-                </select>
-            </div>
-            <div class="opt-nav"><label>类型名</label><input type="text" name="categoryName" class="opt-input" maxlength="64"/></div>
-            <div class="opt-nav"><label>备注</label><input type="text" name="remark" class="opt-input" maxlength="64"/></div>
-            <div class="opt-nav"><input type="button" name="submit" value="添加" class="button sure"/></div>
-        </form>
+                        <volist name="list" id="vo">
+                            <if condition="$vo['id'] eq $pid">
+                                <option value="{$vo.id}" selected="selected">{$vo.name}</option>
+                                <else/>
+                                <option value="{$vo.id}">{$vo.name}</option>
+                            </if>
+                        </volist>
+                    </select>
+                </div>
+                <div class="opt-nav"><label>类型名</label><input type="text" name="categoryName" class="opt-input" maxlength="64"/></div>
+                <div class="opt-nav"><label>备注</label><input type="text" name="remark" class="opt-input" maxlength="64"/></div>
+                <div class="opt-nav"><input type="button" name="submit" value="添加" class="button sure"/></div>
+            </form>
+        </div>
     </div>
-</body>
+</block>
 <script type="application/javascript">
     $(document).ready(function(){
         $('form .sure').click(function(){
@@ -46,7 +45,7 @@
                     success: function(result){
                         if(result.success){
                             alert('添加成功！');
-                            $('#main .content').load("{:U('Admin/Category/index')}");
+                            $('#main .content').load("{:U('Category/index')}");
                         } else {
                             alert(result.msg);
                         }
