--- a/App/Admin/View/Content/altContent.html
+++ b/App/Admin/View/Content/altContent.html
@@ -1,15 +1,20 @@
-<div class="altCategory pop-container">
-    <h2>修改文章</h2>
-    <form>
-        <div class="opt-nav"><label>标题</label><input type="text" name="title" id="title" class="opt-input" maxlength="64" value="{$list.title}"/></div>
-        <div class="opt-nav"><label>文章内容</label>
-            <!-- 加载编辑器的容器 里面写你的初始化内容-->
-            <textarea id="container" name="content">{$list.content}</textarea>
+<extend name="Public:default" />
+<block name="container">
+    <div class="container-fluid">
+        <div class="altCategory pop-container">
+            <h2>修改文章</h2>
+            <form>
+                <div class="opt-nav"><label>标题</label><input type="text" name="title" id="title" class="opt-input" maxlength="64" value="{$list.title}"/></div>
+                <div class="opt-nav"><label>文章内容</label>
+                    <!-- 加载编辑器的容器 里面写你的初始化内容-->
+                    <textarea id="container" name="content">{$list.content}</textarea>
+                </div>
+                <input type="hidden" name="id" id="actid" value="{$list.id}" />
+                <div class="opt-nav"><input type="button" name="submit" value="更新" class="button sure"/></div>
+            </form>
         </div>
-        <input type="hidden" name="id" id="actid" value="{$list.id}" />
-        <div class="opt-nav"><input type="button" name="submit" value="更新" class="button sure"/></div>
-    </form>
-</div>
+    </div>
+</block>
 <!-- 配置文件 -->
 <script type="text/javascript" src="__PUBLIC__/UEditor/ueditor.config.js"></script>
 <!-- 编辑器源码文件 -->
@@ -18,8 +23,8 @@
 <script type="application/javascript">
     //实例化编辑器
     var editor = UE.getEditor('container', {
-        UEDITOR_HOME_URL : '/Public/UEditor/',//为编辑器实例添加一个路径，这个不能被注释
-        serverUrl : "/Public/UEditor/php/controller.php", // 服务器统一请求接口路径
+        UEDITOR_HOME_URL : '__PUBLIC__/UEditor/',//为编辑器实例添加一个路径，这个不能被注释
+        serverUrl : "__PUBLIC__/UEditor/php/controller.php", // 服务器统一请求接口路径
         initialFrameWidth : 960,
         initialFrameHeight : 400
     });
@@ -37,12 +42,12 @@
             } else {
                 $.ajax({
                     type: "POST",
-                    url: "{:U('Admin/Content/altContent')}",
+                    url: "{:U('Content/altContent')}",
                     data: {id:_id,title:_title,content:_content},
                     success: function(result){
                         if(result.success){
                             alert('更新成功！');
-                            $('#main .content').load("{:U('Admin/Content/index')}");
+                            $('#main .content').load("{:U('Content/index')}");
                         } else {
                             alert(result.msg);
                         }
