--- a/App/Admin/View/Content/index.html
+++ b/App/Admin/View/Content/index.html
@@ -1,71 +1,83 @@
 <extend name="Public:default" />
 <block name="container">
     <div class="container-fluid">
-        <h2>文章列表</h2>
-        <table class="sportstype">
-            <caption>{$captionTitle}</caption>
-            <tr>
-                <th>id</th>
-                <th>文章</th>
-                <th>状态</th>
-                <th>创建时间</th>
-                <th>修改时间</th>
-                <th>操作</th>
-            </tr>
-            <volist name="list" id="vo">
-                <tr>
-                    <td>{$vo.id}</td>
-                    <td><a href="javascript:void(0);" class="catName" title="{$vo.title}">{$vo.title}</a></td>
-                    <td><span class="catName">{$vo.status}</span></td>
-                    <td><span class="catName">{$vo.created}</span></td>
-                    <td><span class="catName">{$vo.modified}</span></td>
-                    <td><span class="act alter" title="{$vo.title}" actid="{$vo.id}">修改</span>｜<span class="act del" title="{$vo.title}" actid="{$vo.id}">删除</span></td>
-                </tr>
-            </volist>
-        </table>
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="widget-box">
+                    <div class="widget-title">
+                        <span class="icon">
+                            <i class="icon-th"></i>
+                        </span>
+                        <h5>文章列表</h5>
+                    </div>
+                    <div class="widget-content nopadding">
+                        <table class="table table-bordered table-striped">
+                            <thead>
+                            <tr>
+                                <th>id</th>
+                                <th>文章</th>
+                                <th>状态</th>
+                                <th>创建时间</th>
+                                <th>修改时间</th>
+                                <th>操作</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <volist name="list" id="vo">
+                                <tr>
+                                    <td>{$vo.id}</td>
+                                    <td><a href="javascript:void(0);" class="catName" title="{$vo.title}">{$vo.title}</a></td>
+                                    <td><span class="catName">{$vo.status}</span></td>
+                                    <td><span class="catName">{$vo.created}</span></td>
+                                    <td><span class="catName">{$vo.modified}</span></td>
+                                    <td>
+                                        <a title="修改" href="{:U('altContent', array('aid' => $vo['id']))}"><i class="icon-pencil"></i></a>
+                                        <a href="{:U('deleteUser', array('id' => $v['id']))}" title="删除" onclick="if(!confirm('确定删除《{$vo[\'title\']}》？')){return false;}"><i class="icon-trash"></i></a></td>
+                                </tr>
+                            </volist>
+                            <tr><td colspan="6">{$page}</td></tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </block>
-<style>
-    .pop-wrap{position: absolute;top: 50%;left: 50%; width: 600px;height: 300px;margin-top: -150px;margin-left: -300px; display: none;background: #EEEEEE}
-    .pop-wrap p{margin: 0 auto;}
-</style>
-<div class="pop-wrap">
-    <p>真的要删除《<span>Hello world!</span>》吗？</p>
-    <input class="button sure" type="button" value="确定">
-    <input class="button cancel" type="button" value="取消">
-</div>
-<script type="application/javascript">
-    $(function () {
-        //修改
-        $('.alter').click(function(){
-            var aid = $(this).attr('actid');
-            $('.content').load("{:U('Admin/Content/altContent')}", {aid:aid});
-        });
+<block name="js">
+    <script type="application/javascript">
+        $(function () {
+            //修改
+            $('.alter').click(function(){
+                var aid = $(this).attr('actid');
+                $('.content').load("{:U('Content/altContent')}", {aid:aid});
+            });
 
 
-        //删除
-        $('.del').click(function(){
-            var _id = $(this).attr('actid'),_title = $(this).attr('title');
-            $('.pop-wrap span').html(_title);
-            $('.pop-wrap').show();
-            $('.pop-wrap .sure').click(function(){
-                $.ajax({
-                    type: "POST",
-                    url: "{:U('Admin/Content/delContent')}",
-                    data: {id:_id},
-                    success: function(result){
-                        if(result.success){
-                            alert('删除成功！');
-                            $('#main .content').load("{:U('Admin/Content/index')}");
-                        } else {
-                            alert(result.msg);
+            //删除
+            $('.del').click(function(){
+                var _id = $(this).attr('actid'),_title = $(this).attr('title');
+                $('.pop-wrap span').html(_title);
+                $('.pop-wrap').show();
+                $('.pop-wrap .sure').click(function(){
+                    $.ajax({
+                        type: "POST",
+                        url: "{:U('Content/delContent')}",
+                        data: {id:_id},
+                        success: function(result){
+                            if(result.success){
+                                alert('删除成功！');
+                                $('#main .content').load("{:U('Content/index')}");
+                            } else {
+                                alert(result.msg);
+                            }
                         }
-                    }
+                    });
+                });
+                $('.pop-wrap .cancel').click(function(){
+                    $('.pop-wrap').hide();
                 });
             });
-            $('.pop-wrap .cancel').click(function(){
-                $('.pop-wrap').hide();
-            });
         });
-    });
-</script>
+    </script>
+</block>
