--- a/App/Admin/View/Node/index.html
+++ b/App/Admin/View/Node/index.html
@@ -16,24 +16,24 @@
 								<div class="app">
 									<p>
 										<strong>{$app.title}</strong>
-										[<a href="{:U('Node/addNode')}?pid={$app[id]}&level=2">添加控制器</a>]
-										[<a href="{:U('updateNode')}?id={$app.id}">修改</a>]
-										[<a href="{:U('deleteNode')}?id={$app.id}" onclick="if(!confirm('确认删除？')){return false;}">删除</a>]
+										[<a href="{:U('Node/addNode', array('pid' => $app['id'], 'level' => 2))}">添加控制器</a>]
+										[<a href="{:U('updateNode', array('id' => $app['id']))}">修改</a>]
+										[<a href="{:U('deleteNode', array('id' => $app['id']))}" onclick="if(!confirm('确认删除？')){return false;}">删除</a>]
 									</p>
 									
 									<!-- <volist name="app.child" id="action"> -->
 										<dl>
 											<dt>
 												<strong>{$action.title}</strong>
-												[<a href="{:U('addNode')}?pid={$action['id']}&level=3">添加方法</a>]
-												[<a href="{:U('updateNode')}?id={$action.id}">修改</a>]
-												[<a href="{:U('deleteNode')}?id={$action.id}" onclick="if(!confirm('确认删除？')){return false;}">删除</a>]
+												[<a href="{:U('addNode', array('pid' => $action['id'], 'level' => 3))}">添加方法</a>]
+												[<a href="{:U('updateNode', array('id' => $action['id']))}">修改</a>]
+												[<a href="{:U('deleteNode', array('id' => $action['id']))}" onclick="if(!confirm('确认删除？')){return false;}">删除</a>]
 											</dt>
 											<!-- <volist name='action.child' id='method'>  -->
 												<dd>
 													<span>{$method.title}</span>
-													[<a href="{:U('updateNode')}?id={$method.id}">修改</a>]
-													[<a href="{:U('deleteNode')}?id={$method.id}" onclick="if(!confirm('确认删除？')){return false;}">删除</a>]
+													[<a href="{:U('updateNode', array('id' => $method['id']))}">修改</a>]
+													[<a href="{:U('deleteNode', array('id' => $method['id']))}" onclick="if(!confirm('确认删除？')){return false;}">删除</a>]
 												</dd>
 											<!-- </volist> -->
 										</dl>
