--- a/App/Admin/View/Category/altCategory.html
+++ b/App/Admin/View/Category/altCategory.html
@@ -16,13 +16,13 @@
                                 <label class="control-label">父类型</label>
                                 <div class="controls">
                                     <select name="pCategory" id="pid" class="opt-input">
-                                        <if condition="pid eq 0">
+                                        <if condition="$category['pid'] eq 0">
                                             <option value="0" selected="selected">大类</option>
                                             <else/>
                                             <option value="0">大类</option>
                                         </if>
                                         <volist name="list" id="vo">
-                                            <if condition="$vo['id'] eq $pid">
+                                            <if condition="$vo['id'] eq $category['pid']">
                                                 <option value="{$vo['id']}" selected="selected">{$vo['pad']}{$vo['name']}</option>
                                                 <else/>
                                                 <option value="{$vo['id']}">{$vo['pad']}{$vo['name']}</option>
@@ -34,13 +34,14 @@
                             <div class="control-group">
                                 <label class="control-label">类型名</label>
                                 <div class="controls">
-                                    <input type="text" id="name" name="name" maxlength="64" />
+                                    <input type="text" id="name" name="name" maxlength="64" value="{$category['name']}" />
+                                    <input type="hidden" id="actid" value="{$category['id']}" />
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label class="control-label">备注</label>
                                 <div class="controls">
-                                    <input type="text" id="remark" name="remark" maxlength="64" />
+                                    <input type="text" id="remark" name="remark" maxlength="64" value="{$category['remark']}" />
                                 </div>
                             </div>
                             <div class="form-actions">
@@ -60,6 +61,7 @@
         $(document).ready(function(){
             $('form .sure').click(function(){
                 var _pid = $('#pid').val(),
+                        _id = $('#actid').val(),
                         _name = $('#name').val(),
                         _remark = $('#remark').val();
                 if(_name.trim() == ''){
@@ -68,8 +70,8 @@
                 }
                 $.ajax({
                     type: "POST",
-                    url: "{:U('Category/addCategory')}",
-                    data: {pid:_pid,name:_name,remark:_remark},
+                    url: "{:U('Category/altCategory')}",
+                    data: {id:_id,pid:_pid,name:_name,remark:_remark},
                     success: function(result){
                         if(result.success){
                             alert('添加成功！');
