--- a/App/Home/View/Index/index.html
+++ b/App/Home/View/Index/index.html
@@ -78,7 +78,7 @@
 
 </div>
 
-<div id="i-content">
+<div id="content">
     <iframe name="_main" style="min-width: 960px;width: 100%;height: 800px;"></iframe>
 </div>
 
