--- a/Public/Admin/css/unicorn.main.css
+++ b/Public/Admin/css/unicorn.main.css
@@ -195,11 +195,22 @@ a:hover {
 
 
 /* Content */
-#content {
+#i-content {
     background: none repeat scroll 0 0 #eeeeee;
     margin-left: 220px;
     margin-right: 0;
     padding-bottom: 25px;
+    position: relative;
+    min-height: 500px;
+    width: auto;
+    border-top-left-radius: 8px;
+}
+
+#content {
+    background: none repeat scroll 0 0 #eeeeee;
+    /*margin-left: 220px;
+    margin-right: 0;*/
+    /*padding-bottom: 25px;*/
     position: relative;
     min-height: 500px;
     width: auto;
@@ -216,7 +227,7 @@ a:hover {
 	background-image: linear-gradient(top, #FFFFFF 0%, #EEEEEE 100%);
     border-top-left-radius: 8px;
     height: 80px;
-    position: abslute;
+    position: absolute;
     width: 100%;
     margin-top: -38px;
     z-index: 20;
@@ -239,7 +250,7 @@ a:hover {
 }
 
 #content-header h1, #content-header .btn-group {
-	margin-top: 20px;
+	margin-top: 5px;
 }
 #content-header .btn-group .btn {
 	padding: 11px 14px 9px;
@@ -250,7 +261,7 @@ a:hover {
 }
 
 .container-fluid .row-fluid:first-child {
-	margin-top: 20px;
+	margin-top: 5px;
 }
 /* Breadcrumb */
 #breadcrumb {
@@ -619,8 +630,8 @@ a:hover {
     border-left: 1px solid #CDCDCD;
     border-right: 1px solid #CDCDCD;
     clear: both;
-    margin-top: 16px;
-    margin-bottom: 16px;
+    /*margin-top: 16px;
+    margin-bottom: 16px;*/
     position: relative;
 }
 .widget-box.widget-calendar, .widget-box.widget-chat {
