准备增加rbac权限管理

--- a/App/Admin/View/Index/index.html
+++ b/App/Admin/View/Index/index.html
@@ -43,7 +43,7 @@
             <a href="#"><i class="icon icon-th-list"></i> <span>节点管理</span> <span class="label">2</span></a>
             <ul>
                 <li><a href="{:U('Node/index')}" target="_main">节点列表</a></li>
-                <li><a href="{:U('Node/addNode')}" target="_main">节点添加</a></li>
+                <li><a href="{:U('Node/addNode')}" target="_main">添加应用节点</a></li>
             </ul>
         </li>
         <li class="submenu">
