--- a/App/Admin/View/Node/addNode.html
+++ b/App/Admin/View/Node/addNode.html
@@ -8,7 +8,7 @@
 						<span class="icon">
 							<i class="icon-th"></i>
 						</span>
-						<h5>节点添加</h5>
+						<h5>{$type}节点添加</h5>
 					</div>
 					<div class="widget-content nopadding">
 						<form action="{:('addNode')}" method="post" class="form-horizontal">
