--- a/App/Admin/View/Public/login.html
+++ b/App/Admin/View/Public/login.html
@@ -64,6 +64,12 @@
             obj.src = obj.src + "?code=" + Math.random();
         }
         $(function(){
+            $('#verify').keydown(function(e) {
+                //回车事件
+                if (e.which == 13) {
+                    $('.sure').click();
+                }
+            });
             $('.sure').click(function(){
                 var _username = $('#username').val(),
                         _password = $('#password').val(),
@@ -76,7 +82,7 @@
                         if (data.success) {
                             window.location.href = "{:U('Admin/Index/index')}";
                         } else {
-                            RefreshCode('#verify-img');
+                            $('#verify-img').click();
                             alert(data.msg);
                         }
                     }
